# qsdf_core_master

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CodingRules.MD  InternalSuperBuild.cmake  README.md  SuperBuild.cmake  generate.py  package-lock.json  package.json
cmake/: AutoAndroid.cmake  AutoVcpkg.cmake  BundleInstall.cmake.in  ExternalProjectDependency.cmake  FindNpm.cmake  FindQtAndCheckVersion.cmake  FrameworkAPI.cmake  FrameworkAPIInternal.cmake  FrameworkUtils.cmake  Lua.cmake  LuaConfig.cmake.in  MIPSoftwareAPI.cmake  MIPSoftwareAPIInternal.cmake  QSDFConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.cmakein
scripts/: BuildWithAndroid.py  Build_IKPAS_With_Android.ps1  Build_With_Android.ps1  build_with_android.ps1  generateicon.py  helpers.ps1
scripts/android_customization/: AndroidManifest.xml
share/: CMakeLists.txt
share/mipsoftware/: CMakeLists.txt
share/mipsoftware/themes/: dark.mipstheme
share/mipsoftware/translations/: CMakeLists.txt  mipsoftware_zh_CN.ts
share/qsdf/: CMakeLists.txt
share/qsdf/layouts/: Four-Up.xml
share/qsdf/translations/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_version.h.cmakein  main.cpp
src/domains/: CMakeLists.txt
src/domains/okr/: CMakeLists.txt
src/domains/okr/src/: qml.qrc
src/domains/okr/src/qml/: TopLevelPlanning.qml
src/libs/: CMakeLists.txt
src/libs/extensionsystem/: CMakeLists.txt  extensionsystem_global.h  ielement.cpp  ielement.h  iobserver.cpp  iobserver.h  iplugin.cpp  iplugin.h  isubject.cpp  isubject.h  optionsparser.cpp  optionsparser.h  pluginerroroverview.cpp  pluginerroroverview.h  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h  pluginspec.cpp  pluginspec.h  pluginspec_p.h
src/libs/utils/: CMakeLists.txt  algorithm.h  assert.cpp  assert.h  benchmarker.cpp  benchmarker.h  flowgraphicslayout.cpp  flowgraphicslayout.h  id.cpp  id.h  macrodefinition.cpp  macrodefinition.h  mimetypes.cpp  mimetypes.h  mipsapplication.cpp  mipsapplication.h  mipsassert.cpp  mipsassert.h  mipssettings.cpp  mipssettings.h  quickapplication.cpp  quickapplication.h  stringutils.cpp  stringutils.h  stylehelper.cpp  stylehelper.h  utils.qrc  utils_global.h
src/libs/utils/icons/dark/: index.theme
src/libs/utils/quickevent/: customevent.cpp  customevent.h  customeventapplication.cpp  customeventapplication.h  customeventapplication.tpp  customeventapplication_p.h  customquickevent.cpp  customquickevent.h  quickevent.h  quickmacro.h
src/libs/utils/singleapplication/: localpeer.cpp  localpeer.h  lockedfile.cpp  lockedfile.h  singleapplication.cpp  singleapplication.h
src/libs/utils/theme/: theme.cpp  theme.h  theme_p.h
src/plugins/: CMakeLists.txt
src/plugins/coreplugin/: CMakeLists.txt  Core.json.in  core_global.h  coreconstants.h  coreplugin.cpp  coreplugin.h  corepluginmacro.cpp  corepluginmacro.h  coreproxystyle.cpp  coreproxystyle.h  framelessquickwindow.cpp  framelessquickwindow.h  icontext.cpp  icontext.h  icore.cpp  icore.h  mainqmlapplicationengine.cpp  mainqmlapplicationengine.h  mainwindow.cpp  mainwindow.h  qmlapplicationengine.cpp  qmlapplicationengine.h  singlesubject.cpp  singlesubject.h  themechooser.cpp  themechooser.h
src/plugins/coreplugin/event/: mipscoreevent.cpp  mipscoreevent.h  mipsevent.cpp  mipsevent.h
src/plugins/coreplugin/qml/: main.qml
src/plugins/luasupport/: CMakeLists.txt  LuaSupport.json.in  luasupportplugin.cpp  luasupportplugin.h  luawrapper.cpp  luawrapper.h
src/share/: CMakeLists.txt
src/share/truesightlib/: CMakeLists.txt  truesightlib.xml
src/shared/singleapplication/: CMakeLists.txt  localpeer.cpp  localpeer.h  lockedfile.cpp  lockedfile.h  singleapplication.cpp  singleapplication.h
src/utility_software/: CMakeLists.txt
src/utility_software/buildoptions/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsmanager.h
src/utility_software/screendesigner/: CMakeLists.txt  diagramscene.cpp  diagramscene.h  diagramview.cpp  diagramview.h  main.cpp  mainwindow.cpp  mainwindow.h  thumbnailscene.cpp  thumbnailscene.h  thumbnailview.cpp  thumbnailview.h
superbuild/: External_Lua.cmake
superbuild/domain/: EPDomain_IKPAS.cmake  EPDomain_OKRDP.cmake  EPDomain_okr.cmake  EPDomain_okrdp.cmake
template/domain/: .editorconfig  CMakeLists.txt
template/domain/src/qml/: Viewer.qml
template/domain/tests/: CMakeLists.txt  main.cpp  main.qml
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/utils/: CMakeLists.txt
tests/auto/utils/stringutils/: CMakeLists.txt  tst_utils_stringutils.cpp
